--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <style>
       body {
         margin: 0;
+        background-color: greenyellow;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
       }
     </style>
   </head>
